--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <nav>
             <div class="navpart1">
               <div id="logoimg">
-                <img src="./logo meta (2) (1) 1.svg" alt="" />
+                <img src="./images/logo meta (2) (1) 1.svg" alt="" />
               </div>
               <div id="verticalline"></div>
               <div id="logotext">
@@ -75,7 +75,7 @@
               </div>
             </div>
             <div id="homepagephoto">
-              <img src="./homeimg.jpg" alt="" />
+              <img src="./images/homeimg.jpg" alt="" />
             </div>
           </div>
         </div>
@@ -83,7 +83,7 @@
       <div id="page2">
         <div id="page2wrapper">
           <div id="page2photodiv">
-            <img src="./meta formation.jpg" alt="" />
+            <img src="./images/meta formation.jpg" alt="" />
           </div>
           <div id="page2textdiv">
             <h1>META Formation</h1>
@@ -111,7 +111,7 @@
             <div id="box1">
               <div class="boxinner">
                 <div class="boxpicturediv">
-                  <img id="boximg1" src="./sonu khan.jpg" alt="" />
+                  <img id="boximg1" src="./images/sonu khan.jpg" alt="" />
                 </div>
                 <div class="boxtextdiv">
                   <h2>Sonu Khan</h2>
@@ -122,7 +122,7 @@
             <div id="box2">
               <div class="boxinner">
                 <div class="boxpicturediv">
-                  <img id="boximg2" src="./aadarsh patil.jpg" alt="" />
+                  <img id="boximg2" src="./images/aadarsh patil.jpg" alt="" />
                 </div>
                 <div class="boxtextdiv">
                   <h2>Aadarsh Patil</h2>
@@ -133,7 +133,7 @@
             <div id="box3">
               <div class="boxinner">
                 <div class="boxpicturediv">
-                  <img id="boximg1" src="./aryan natekar.jpeg" alt="" />
+                  <img id="boximg1" src="./images/aryan natekar.jpeg" alt="" />
                 </div>
                 <div class="boxtextdiv">
                   <h2>Aryan Natekar</h2>
@@ -144,7 +144,7 @@
             <div id="box4">
               <div class="boxinner">
                 <div class="boxpicturediv">
-                  <img id="boximg3" src="./Felix.jpeg" alt="" />
+                  <img id="boximg3" src="./images/Felix.jpeg" alt="" />
                 </div>
                 <div class="boxtextdiv">
                   <h2>Felix Jayaprakash</h2>
@@ -155,7 +155,7 @@
             <div id="box5">
               <div class="boxinner">
                 <div class="boxpicturediv">
-                  <img id="boximg4" src="./MAYAS 2.jpeg" alt="" />
+                  <img id="boximg4" src="./images/MAYAS 2.jpeg" alt="" />
                 </div>
                 <div class="boxtextdiv">
                   <h2>Mayas Sharma</h2>
@@ -166,7 +166,7 @@
             <div id="box6">
               <div class="boxinner">
                 <div class="boxpicturediv">
-                  <img id="boximg1" src="./saareesh naik.JPG" alt="" />
+                  <img id="boximg1" src="./images/saareesh naik.JPG" alt="" />
                 </div>
                 <div class="boxtextdiv">
                   <h2>Saareesh Naik</h2>
@@ -178,7 +178,7 @@
             <div id="box8">
               <div class="boxinner">
                 <div class="boxpicturediv">
-                  <img id="boximg8" src="./Tejas rajbhog.jpeg" alt="" />
+                  <img id="boximg8" src="./images/Tejas rajbhog.jpeg" alt="" />
                 </div>
                 <div class="boxtextdiv">
                   <h2>Tejas Rajbhoj</h2>
