made it fully responsive

--- a/index.html
+++ b/index.html
@@ -105,19 +105,97 @@
           <div id="page2textdiv">
             <h1>META Formation</h1>
             <h4>
-              META is formed with the primary objective of exposing the <br class="break"/>
-              aspiring mechanical engineers to the practical aspects and <br class="break" />
+              META is formed with the primary objective of exposing the
+              <br class="break" />
+              aspiring mechanical engineers to the practical aspects and
+              <br class="break" />
               professional challenges for their sustainable growth.
             </h4>
             <h5>
               META was formally inaugurated by our Director <br class="break" />
-              (Incharge), Dr. Saidi Reddy on 8th November 2019 in the <br class="break" />
-              presence of Dr. C. Vyjayanthi, HoD Mechanical and was <br class="break" />
-              attended by the faculty, staff and students of Mechanical <br class="break" />
-              and Civil Engineering. The inaugural ceremony included <br class="break" />
-              Logo launch, highlighting the activities conducted and <br class="break" />
+              (Incharge), Dr. Saidi Reddy on 8th November 2019 in the
+              <br class="break" />
+              presence of Dr. C. Vyjayanthi, HoD Mechanical and was
+              <br class="break" />
+              attended by the faculty, staff and students of Mechanical
+              <br class="break" />
+              and Civil Engineering. The inaugural ceremony included
+              <br class="break" />
+              Logo launch, highlighting the activities conducted and
+              <br class="break" />
               future plans.
             </h5>
+          </div>
+        </div>
+      </div>
+      <div id="page3">
+        <div id="text">
+          <h2>Events Ahead : META's Roadmap</h2>
+        </div>
+        <div id="boxes">
+          <div id="box1" class="box">
+            <div class="imgContainer">
+              <img src="./images/event1.jpeg" alt="" />
+            </div>
+            <div class="text">
+              <div class="textPart1">
+                <h2>ProtoMech</h2>
+              </div>
+              <div class="textPart2">
+                <h4>
+                  ProtoMech is a competition for designing mechanical
+                  prototypes. Teams solve real-world engineering challenges. Showcase your skills and creativity in this hands-on event.
+                </h4>
+              </div>
+              <div class="textPart3">
+                <h3>Know more</h3>
+              </div>
+            </div>
+            <div class="piche">
+              <h2>ProtoMech</h2>
+            </div>
+          </div>
+          <div id="box2" class="box">
+            <div class="imgContainer">
+              <img src="./images/event2.png" alt="" />
+            </div>
+            <div class="text">
+              <div class="textPart1">
+                <h2>Tech Talks</h2>
+              </div>
+              <div class="textPart2">
+                <h4>
+                  Join our Talks to explore innovations in mechanical
+                  engineering. Connect with experts and peers. Expand your knowledge in a collaborative setting.
+                </h4>
+              </div>
+              <div class="textPart3">
+                <h3>Know more</h3>
+              </div>
+            </div>
+            <div class="piche">
+              <h2>Tech Talks</h2>
+            </div>
+          </div>
+          <div id="box3" class="box">
+            <div class="imgContainer">
+              <img src="./images/event3.png" alt="" />
+            </div>
+            <div class="text">
+              <div class="textPart1">
+                <h2>Workshops</h2>
+              </div>
+              <div class="textPart2">
+                <h4>Hands-on sessions in CAD, 3D printing, and robotics. Led by industry experts. Enhance your skills and stay ahead in mechanical engineering.</h4>
+                <h4></h4>
+              </div>
+              <div class="textPart3">
+                <h3>Know more</h3>
+              </div>
+            </div>
+            <div class="piche">
+              <h2>Workshops</h2>
+            </div>
           </div>
         </div>
       </div>
@@ -125,7 +203,7 @@
         <div id="page4wrapper">
           <h1>META Council of Leaders 2024 - 2025</h1>
           <div id="councildiv">
-            <div id="box1">
+            <div>
               <div class="boxinner">
                 <div class="boxpicturediv">
                   <img id="boximg1" src="./images/sonu khan.jpg" alt="" />
@@ -136,7 +214,7 @@
                 </div>
               </div>
             </div>
-            <div id="box2">
+            <div>
               <div class="boxinner">
                 <div class="boxpicturediv">
                   <img id="boximg2" src="./images/aadarsh patil.jpg" alt="" />
@@ -147,7 +225,7 @@
                 </div>
               </div>
             </div>
-            <div id="box3">
+            <div>
               <div class="boxinner">
                 <div class="boxpicturediv">
                   <img id="boximg1" src="./images/aryan natekar.jpeg" alt="" />
@@ -261,7 +339,12 @@
         </div>
       </footer>
     </main>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
+      integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script src="script.js"></script>
   </body>
 </html>
