some minor changes

--- a/index.html
+++ b/index.html
@@ -330,9 +330,9 @@
         </div>
         <div id="footerpart2">
           <div class="develop">
-            <h2>Design and Develop by</h2>
+            <h2>Design and Developed by</h2>
             <h4>
-              Swaraj Singh (22MCE1030), Felix Jayaprakash (22MCE1008), Prshant
+              Swaraj Singh (22MCE1030), Felix Jayaprakash (22MCE1008), Prashant
               Swami (22MCE1021)
             </h4>
           </div>
